// Vitest Snapshot v1

exports[`VariablesRow > should render correctly 1`] = `
"<tr class=\\"variablesRow\\" data-test-id=\\"variables-row\\">
  <td class=\\"variables-key-column\\">
    <div><span>key</span></div>
  </td>
  <td class=\\"variables-value-column\\">
    <div><span>value</span></div>
  </td>
  <td class=\\"variables-usage-column\\">
    <div><span class=\\"usageSyntax el-tooltip__trigger el-tooltip__trigger\\">$vars.key</span>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </td>
  <td>
    <div class=\\"buttons hoverButtons\\">
      <div class=\\"el-tooltip__trigger\\"><button class=\\"button button tertiary medium disabled mr-xs mr-xs\\" disabled=\\"\\" aria-disabled=\\"true\\" aria-live=\\"polite\\" data-test-id=\\"variable-row-edit-button\\">
          <!--v-if--><span>Edit</span>
        </button></div>
      <!--teleport start-->
      <!--teleport end-->
      <div class=\\"el-tooltip__trigger\\"><button class=\\"button button tertiary medium disabled\\" disabled=\\"\\" aria-disabled=\\"true\\" aria-live=\\"polite\\" data-test-id=\\"variable-row-delete-button\\">
          <!--v-if--><span>Delete</span>
        </button></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </td>
</tr>"
`;

exports[`VariablesRow > should show key and value inputs in edit mode 1`] = `
"<tr class=\\"variablesRow\\" data-test-id=\\"variables-row\\">
  <td class=\\"variables-key-column\\">
    <div>
      <div class=\\"container\\" data-test-id=\\"variable-row-key-input\\">
        <!--v-if-->
        <div class=\\"\\">
          <div class=\\"el-input el-input--large n8n-input\\">
            <!-- input -->
            <!-- prepend slot -->
            <!--v-if-->
            <div class=\\"el-input__wrapper is-focus\\">
              <!-- prefix slot -->
              <!--v-if--><input class=\\"el-input__inner\\" autocomplete=\\"off\\" name=\\"key\\" rows=\\"2\\" maxlength=\\"Infinity\\" title=\\"\\" type=\\"text\\" tabindex=\\"0\\" placeholder=\\"Enter a name\\" id=\\"el-id-5581-7\\"><!-- suffix slot -->
              <!--v-if-->
            </div><!-- append slot -->
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
  </td>
  <td class=\\"variables-value-column\\">
    <div>
      <div class=\\"container\\" data-test-id=\\"variable-row-value-input\\">
        <!--v-if-->
        <div class=\\"\\">
          <div class=\\"el-input el-input--large n8n-input\\">
            <!-- input -->
            <!-- prepend slot -->
            <!--v-if-->
            <div class=\\"el-input__wrapper\\">
              <!-- prefix slot -->
              <!--v-if--><input class=\\"el-input__inner\\" autocomplete=\\"off\\" name=\\"value\\" rows=\\"2\\" maxlength=\\"Infinity\\" title=\\"\\" type=\\"text\\" tabindex=\\"0\\" placeholder=\\"Enter a value\\" id=\\"el-id-5581-8\\"><!-- suffix slot -->
              <!--v-if-->
            </div><!-- append slot -->
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
  </td>
  <td class=\\"variables-usage-column\\">
    <div><span class=\\"usageSyntax el-tooltip__trigger el-tooltip__trigger\\">$vars.key</span>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </td>
  <td>
    <div class=\\"buttons\\"><button class=\\"button button tertiary medium mr-xs mr-xs\\" aria-live=\\"polite\\" data-test-id=\\"variable-row-cancel-button\\">
        <!--v-if--><span>Cancel</span>
      </button><button class=\\"button button primary medium\\" aria-live=\\"polite\\" data-test-id=\\"variable-row-save-button\\">
        <!--v-if--><span>Save</span>
      </button></div>
  </td>
</tr>"
`;
